troca de imagens e textos/ criação pag pt-br

--- a/image-version-en.html
+++ b/image-version-en.html
@@ -67,7 +67,7 @@
                     <div class="mainmenu">
                         <div class="navbar navbar-nobg">
                             <div class="navbar-header">
-                                <a class="navbar-brand" href=""><span>Apps</span>lan</a>
+                                <a class="navbar-brand" href="image-version-en.html"><span>Apps</span>lan</a>
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
@@ -81,10 +81,15 @@
                                     <ul class="nav navbar-nav navbar-right">
                                         <li class="active"><a class="smooth_scroll" href="#slider">HOME</a></li>
                                         <li><a class="smooth_scroll" href="#service">FEATURE</a></li>
-                                        <li><a class="smooth_scroll" href="#pricing">PRICE</a></li>
-                                        <li><a class="smooth_scroll" href="#testimonial">TESTIMONIAL</a></li>
+                                        <li><a class="smooth_scroll" href="#why-choose">ABOUT US</a></li>
                                         <li><a class="smooth_scroll" href="#faq">FAQ</a></li>
                                         <li><a class="smooth_scroll" href="#contact">CONTACT</a></li>
+                                        <li>
+                                            <a href="/image-version-pt-BR.html" class="toggle-lang">
+                                                <img src="assets/img/brasil-flag.png" alt="" height="25px">
+                                                PT-BT
+                                            </a>   
+                                        </li>
                                     </ul>
                                 </nav>
                             </div>
@@ -110,16 +115,14 @@
 
                             <!-- intro image -->
                             <div class="col-md-6 col-sm-12 intro-img">
-                                <img src="assets/img/slider/2.png" alt="">
+                                <img src="assets/img/slider/devices-home-white.svg" alt="">
                             </div>
 
                             <!-- intro text -->
                             <div class="col-md-6 col-sm-12">
                                 <div class="intro-text-box clearfix">
-                                    <h1>The Best Mobile App</h1>
-                                    <p>Appslan is perfect App Showcase.</p>
-                                    <a href="#" class="dwnld-btn playstore"><img src="assets/img/google-play-button.png" alt=""></a>
-                                    <a href="#" class="dwnld-btn appstore"><img src="assets/img/app-store-button.svg" alt=""></a>
+                                    <h1>CTD LIMITED</h1>
+                                    <p>DELIVERING INNOVATIONS AROUND THE WORLD</p>
                                 </div>
                             </div>
 
@@ -182,12 +185,11 @@
     <!-- Service area starts -->
     <section id="service" class="service-area section-big">
         <div class="container">
-
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>Appslan Features</h2>
-                        <p>Choose our very cheap and best quality hosting services package and run your business like a boss.</p>
+                        <h2 class="mb-0">CTD Features</h2>
+                        <p>Delivering innovations around the World</p>
                     </div>
                 </div>
             </div>
@@ -220,7 +222,7 @@
 
                 <div class="col-sm-4">
                     <div class="feture-img">    
-                        <img src="assets/img/feature/1.jpg" alt="">
+                        <img src="assets/img/feature/mobile-device.svg" alt="">
                     </div>
                 </div>
 
@@ -304,7 +306,8 @@
                 <div class="col-md-12">
                     <div class="section-title text-center">
                         <h2>Why Choose Us?</h2>
-                        <p>Choose our very cheap and best quality hosting services package and run your business like a boss.</p>
+                        <p>We are a technology solutions company for your company anywhere in the world. With a team of highly qualified and
+                        experienced professionals ready to meet the expectations and objectives of your business</p>
                     </div>
                 </div>
             </div>
@@ -312,14 +315,15 @@
             <div class="row">
 
                 <div class="col-sm-4">
-                    <img src="assets/img/choose/choose.jpg" alt="">
+                    <img src="assets/img/choose/services.svg" alt="">
                 </div>
 
                 <div class="col-sm-8">
                     <div class="choose-box right">
                         <div class="choose-content">
                             <h3 class="subtitle">Great User Experience</h3>
-                            <p>Signs beast together said earth our fowl signs. Fowl it made years gather. Above may fruitful him. Them day brought place and saw Third. Every from together days life also dream. Signs beast together said earth our fowl signs. Fowl made years gather. Above may  him. Them day brought place and saw Third. Every from together days life also dream has come true finally.</p>
+                            <p>We offer personalized services for your business, be it a large or small company. We offer robust customized software
+                            for what your company needs, made for you and your needs, with all the features to make your company prosper every day.</p>
                         </div>
                     </div>                    
                 </div>
@@ -328,14 +332,15 @@
             <div class="row">
 
                 <div class="col-sm-4 col-sm-push-8">                
-                    <img src="assets/img/choose/left.jpg" alt="">
+                    <img src="assets/img/choose/tecnologies.svg" alt="">
                 </div>
 
                 <div class="col-sm-8 col-sm-pull-4">
                     <div class="choose-box left">
                         <div class="choose-content">
                             <h3 class="subtitle">Global Communication</h3>
-                            <p>Signs beast together said earth our fowl signs. Fowl it made years gather. Above may fruitful him. Them day brought place and saw Third. Every from together days life also dream. Signs beast together said earth our fowl signs. Fowl made years gather. Above may  him. Them day brought place and saw Third. Every from together days life also dream has come true finally.</p>
+                            <p>We also support for the main technologies on the market, able to assist with maintenance and updates, specializing in
+                            automation to optimize your time.</p>
                         </div>
                     </div>
                 </div>
@@ -345,37 +350,6 @@
         </div>
     </section>
     <!-- Why Choose Us ends-->
-
-
-    <!-- Subscribe area starts -->
-    <div id="subscribe" class="subscribe-area section-big">
-        <div class="container">
-            <div class="subscribe-box">
-                <h2>Stay up to date</h2>
-                <p><strong>Subscribe</strong> to our Newsletter. We'll send email notifications everytime we release new Theme.</p>
-
-                <form id="mc-form" class="mc-form">
-                    <div class="newsletter-form">
-
-                        <input type="email" autocomplete="off" id="mc-email" placeholder="Enter your email address" class="form-control">
-
-                        <!-- mailchimp-alerts Start -->
-                        <div class="mailchimp-alerts">
-                            <div class="mailchimp-submitting"></div><!-- mailchimp-submitting end -->
-                            <div class="mailchimp-success"></div><!-- mailchimp-success end -->
-                            <div class="mailchimp-error"></div><!-- mailchimp-error end -->
-                        </div>
-                        <!-- mailchimp-alerts end -->
-
-                        <div class="clearfix"></div>
-
-                        <button class="btn btn-white" type="submit"><i class="fa fa-paper-plane"></i> Subscribe now</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <!-- Subscribe area ends -->
 
 
     <!-- faq area starts -->
@@ -485,7 +459,8 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>Contact Us</h2>
-                        <p>Choose our very cheap and best quality hosting services package and run your business like a boss.</p>
+                        <p>Get in touch with us through the channels below to set up a meeting so we can learn more about your company and make a
+                        quote.</p>
                     </div>
                 </div>
             </div>
