--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                         <li><a class="smooth_scroll" href="#faq">FAQ</a></li>
                                         <li><a class="smooth_scroll" href="#contact">CONTACT</a></li>
                                         <li>
-                                            <a href="/image-version-en.html" class="toggle-lang">
+                                            <a href="./image-version-en.html" class="toggle-lang">
                                                 <img src="assets/img/us-flag.png" alt="" height="25px">
                                                 EN
                                             </a>
