--- a/image-version-en.html
+++ b/image-version-en.html
@@ -85,7 +85,7 @@
                                         <li><a class="smooth_scroll" href="#faq">FAQ</a></li>
                                         <li><a class="smooth_scroll" href="#contact">CONTACT</a></li>
                                         <li>
-                                            <a href="/image-version-pt-BR.html" class="toggle-lang">
+                                            <a href="./index.html" class="toggle-lang">
                                                 <img src="assets/img/brasil-flag.png" alt="" height="25px">
                                                 PT-BT
                                             </a>   
