mudança de tema

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <div class="mainmenu">
                         <div class="navbar navbar-nobg">
                             <div class="navbar-header">
-                                <a class="navbar-brand" href="image-version-en.html"><span>Apps</span>lan</a>
+                                <a class="navbar-brand" href="image-version-en.html"><img src="assets/img/logo.png" alt="" class="img-logo"></a>
                                 <button type="button" class="navbar-toggle" data-toggle="collapse"
                                     data-target=".navbar-collapse">
                                     <span class="sr-only">Toggle navigation</span>
