--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>CTD - LIMITED | Delivering Innovations Around The World</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo.png">
 
     <!-- Bootstrap css -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
