remoção de endereço

--- a/pt-br-version.html
+++ b/pt-br-version.html
@@ -640,7 +640,7 @@
                     <div class="address">
                         <h3 class="subtitle">Informações de Contato</h3>
                         <div class="address-box clearfix">
-                            <p>Av.Angelica 919 apt 52 - 01227000 <br> Sao Paulo SP</p>
+                            <p>Sao Paulo SP</p>
                         </div>
                         <div class="address-box clearfix">
                             <p><a href="tel:015110022">+55 11 950425072</a></p>
