--- a/index.html
+++ b/index.html
@@ -623,16 +623,16 @@
                             <p><a href="tel:015110022">+55 11 950425072</a></p>
                         </div>
                         <div class="address-box clearfix">
-                            <p><a href="mailto:g.c.taveira@gmail.com">g.c.taveira@gmail.com</a></p>
+                            <p><a href="mailto:ctdunlimited@gmail.com">ctdunlimited@gmail.com</a></p>
                         </div>
                         <div class="address-box clearfix">
-                            <p><a href="http://www.yourdomain.com">www.ctd-limited.com</a></p>
+                            <p><a href="#">www.ctd-limited.com</a></p>
                         </div>
 
                         <ul class="social-links">
-                            <li><a href=""><img src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px"></a></li>
-                            <li><a href=""><img src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px"></a></li>
-                            <li><a href=""><img src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px"></a></li>
+                            <li><a href="mailto:ctdunlimited@gmail.com?"><img src="assets/img/icons/mail-icon.svg" alt="mail icon" height="25px"></a></li>
+                            <li><a href="skype:live:.cid.ec6326698f92b3e9?chat"><img src="assets/img/icons/icon-skype.svg" alt="skype icon" height="25px"></a></li>
+                            <li><a href="https://discord.com/channels/@me/1095717653068394519"><img src="assets/img/icons/icon-discord.svg" alt="discord icon" height="25px"></a></li>
                         </ul>
 
                     </div>
