correção de texto

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                                         <li class="active"><a class="smooth_scroll" href="#slider">HOME</a></li>
                                         <li><a class="smooth_scroll" href="#service">FEATURE</a></li>
                                         <li><a class="smooth_scroll" href="#about">SERVICES</a></li>
-                                        <li><a class="smooth_scroll" href="#why-choose">WHY US</a></li>             
-                                        <li><a class="smooth_scroll" href="#steps">HOW IT WORKS</a></li>
+                                        <li><a class="smooth_scroll" href="#why-choose">WHY US?</a></li>             
+                                        <li><a class="smooth_scroll" href="#steps">HOW DOES IT WORK?</a></li>
                                         <li><a class="smooth_scroll" href="#faq">FAQ</a></li>
                                         <li><a class="smooth_scroll" href="#contact">CONTACT</a></li>
                                         <li>
@@ -336,10 +336,7 @@
                         <div class="choose-box right">
                             <div class="choose-content">
                                 <h3 class="subtitle">Great User Experience</h3>
-                                <p>Custom software development services can help companies achieve their business goals by
-                                    building tailored solutions that
-                                    meet their specific needs.
-                                    At our software development company, we have a team of experienced developers who can
+                                <p>we have a team of experienced developers who can
                                     design and build custom software
                                     solutions to help your company streamline processes, increase efficiency, and improve
                                     customer engagement.</p>
@@ -375,14 +372,14 @@
     <!-- steps start -->
     <section id="steps" class="steps section-small">
         <div class="container">
-            <h2 class="text-center">how it works?</h2>
+            <h2 class="text-center">How does it work?</h2>
             <div class="steps-grid">
 
                 <!-- Step 1 -->
                 <article class="step-item">  
                     <h3 class="step-title text-center">
                         <img src="assets/img/steps/step-1.svg" alt="" height="30px"> 
-                        first contact
+                        First Contact
                     </h3>
                     <img src="assets/img/steps/first-contact.svg" alt="" class="img-step" height="200px">
                     <p class="text-center">
