--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         <div class="choose-box right">
                             <div class="choose-content">
                                 <h3 class="subtitle">Great User Experience</h3>
-                                <p>we have a team of experienced developers who can
+                                <p>We have a team of experienced developers who can
                                     design and build custom software
                                     solutions to help your company streamline processes, increase efficiency, and improve
                                     customer engagement.</p>
