--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                         <li>
                                             <a href="./pt-br-version.html" class="toggle-lang">
                                                 <img src="assets/img/brasil-flag.png" alt="" height="25px">
-                                                EN
+                                                PT-BR
                                             </a>
                                         </li>
                                     </ul>
@@ -616,9 +616,9 @@
                         <div class="address-box clearfix">
                             <p>Sao Paulo SP</p>
                         </div>
-                        <div class="address-box clearfix">
+                        <!-- <div class="address-box clearfix">
                             <p><a href="tel:015110022">+55 11 950425072</a></p>
-                        </div>
+                        </div> -->
                         <div class="address-box clearfix">
                             <p><a href="mailto:ctdunlimited@gmail.com">ctdunlimited@gmail.com</a></p>
                         </div>
