--- a/pt-br-version.html
+++ b/pt-br-version.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
 
@@ -331,12 +331,8 @@
                         <div class="choose-box right">
                             <div class="choose-content">
                                 <h3 class="subtitle">ÓTIMA EXPERIÊNCIA DO USUÁRIO</h3>
-                                <p>Em
-                                    nossa empresa de desenvolvimento de
-                                    software, temos uma equipe de desenvolvedores experientes que podem projetar e criar
-                                    soluções de software personalizadas
-                                    para ajudar sua empresa a otimizar processos, aumentar a eficiência e melhorar o
-                                    envolvimento do cliente.</p>
+                                <p>Temos uma equipe de desenvolvedores experientes que podem projetar e criar soluções de software personalizadas para
+                                ajudar sua empresa a otimizar processos, aumentar a eficiência e melhorar o envolvimento do cliente.</p>
                             </div>
                         </div>
                     </div>
@@ -649,9 +645,9 @@
                         <div class="address-box clearfix">
                             <p>Sao Paulo SP</p>
                         </div>
-                        <div class="address-box clearfix">
+                        <!-- <div class="address-box clearfix">
                             <p><a href="tel:015110022">+55 11 950425072</a></p>
-                        </div>
+                        </div> -->
                         <div class="address-box clearfix">
                             <p><a href="mailto:ctdunlimited@gmail.com">ctdunlimited@gmail.com</a></p>
                         </div>
