--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                                 style="height: 0px;">
                                 <div class="panel-body">
                                     We have experience with several front-end and back-end technologies, including but not limited to .NET, Xamarin,
-                                    TypeScript, Python, SQLServer, MySQL, Oracle, Angular, and React. Our team of experts is always learning and expanding
+                                    TypeScript, Python, SQLServer, MySQL, Oracle, Angular and React. Our team of experts is always learning and expanding
                                     their knowledge to stay up-to-date with the latest technologies and trends in the industry.
                                 </div>
                             </div>
@@ -614,7 +614,7 @@
                     <div class="address">
                         <h3 class="subtitle">Contact Info</h3>
                         <div class="address-box clearfix">
-                            <p>Sao Paulo SP</p>
+                            <p>São Paulo - SP</p>
                         </div>
                         <!-- <div class="address-box clearfix">
                             <p><a href="tel:015110022">+55 11 950425072</a></p>
