--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="navbar navbar-nobg">
                             <div class="navbar-header">
                                 <a class="navbar-brand" href="#"><img src="assets/img/logo.png"
-                                        alt="Logo da Empresa" class="img-logo"></a>
+                                        alt="Logo da Empresa" class="img-logo" width="55px" height="55px"></a>
                                 <button type="button" class="navbar-toggle" data-toggle="collapse"
                                     data-target=".navbar-collapse">
                                     <span class="sr-only">Toggle navigation</span>
@@ -88,7 +88,7 @@
                                         <li><a class="smooth_scroll" href="#contact">CONTACT</a></li>
                                         <li>
                                             <a href="./pt-br-version.html" class="toggle-lang">
-                                                <img src="assets/img/brasil-flag.png" alt="Bandeira do Brasil" height="25px">
+                                                <img src="assets/img/brasil-flag.png" alt="Bandeira do Brasil" height="25px" width="25px">
                                                 PT-BR
                                             </a>
                                         </li>
@@ -179,7 +179,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="feture-img">
-                                <img loading="lazy" src="assets/img/feature/mobile-device.svg" alt="Imagem ilustrativa">
+                                <img loading="lazy" src="assets/img/feature/mobile-device.svg" alt="Imagem ilustrativa" width="293px" height="311px">
                             </div>
                         </div>
                         <div class="col-sm-4">
@@ -289,25 +289,25 @@
                 <div class="row fun-fact-area">
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact tab-margin-bottom">
-                            <img loading="lazy" src="assets/img/services/icon-migrations.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" src="assets/img/services/icon-migrations.png" alt="Imagem ilustrativa" width="64px" height="64px">
                             <p>Platform <br>migration</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact tab-margin-bottom sm-no-border xs-no-border">
-                            <img loading="lazy" src="assets/img/services/icon-features.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" src="assets/img/services/icon-features.png" alt="Imagem ilustrativa" width="64px" height="64px">
                             <p>Adding new features to your software/application</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact">
-                            <img loading="lazy" src="assets/img/services/icon-database.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" src="assets/img/services/icon-database.png" alt="Imagem ilustrativa" width="50px" height="50px">
                             <p>Automated <br>database BKP</p>
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-md-3">
                         <div class="fun-fact last">
-                            <img loading="lazy" src="assets/img/services/icon-firewall.png" alt="Imagem ilustrativa">
+                            <img loading="lazy" src="assets/img/services/icon-firewall.png" alt="Imagem ilustrativa" width="64px" height="64px">
                             <p>Firewall services with specialized partnership</p>
                         </div>
                     </div>
@@ -337,7 +337,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4">
-                            <img loading="lazy" src="assets/img/choose/services.svg" alt="Imagem ilustrativa">
+                            <img loading="lazy" src="assets/img/choose/services.svg" alt="Imagem ilustrativa" width="283px" height="206px">
                         </div>
                         <div class="col-sm-8">
                             <div class="choose-box right">
@@ -353,7 +353,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-4 col-sm-push-8">
-                            <img loading="lazy" src="assets/img/choose/tecnologies.svg" alt="Imagem ilustrativa">
+                            <img loading="lazy" src="assets/img/choose/tecnologies.svg" alt="Imagem ilustrativa" width="293px" height="234px">
                         </div>
                         <div class="col-sm-8 col-sm-pull-4">
                             <div class="choose-box left">
