--- a/index.html
+++ b/index.html
@@ -401,13 +401,13 @@
 
 
         <!-- steps start -->
-        <section id="steps" class="steps section-small" role="list">
+        <section id="steps" class="steps section-small" >
             <div class="container">
                 <h2 class="text-center">How does it work?</h2>
                 <div class="steps-grid">
 
                     <!-- Step 1 -->
-                    <article class="step-item" role="listitem">
+                    <article class="step-item" >
                         <h3 class="step-title text-center">
                             <img loading="lazy" src="assets/img/steps/step-1.svg" alt="Imagem ilustrativa" height="30px"
                                 width="30px">
@@ -422,13 +422,13 @@
                             tell us a little about the problems or what you are looking for for your company.
                         </p>
                     </article>
-                    <div class="next-step" aria-hidden="true">
+                    <div class="next-step" aria-hidden="false">
                         <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px"
                             width="40px">
                     </div>
 
                     <!-- Step 2 -->
-                    <article class="step-item" role="listitem">
+                    <article class="step-item" >
                         <h3 class="step-title text-center">
                             <img loading="lazy" src="assets/img/steps/step-2.svg" alt="Imagem ilustrativa" height="30px"
                                 width="30px">
@@ -443,13 +443,13 @@
                             understand your company and which procedures best fit your needs and what can be improved.
                         </p>
                     </article>
-                    <div class="next-step" aria-hidden="true">
+                    <div class="next-step" aria-hidden="false">
                         <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px"
                             width="40px">
                     </div>
 
                     <!-- Step 3 -->
-                    <article class="step-item" role="listitem">
+                    <article class="step-item" >
                         <h3 class="step-title text-center">
                             <img loading="lazy" src="assets/img/steps/step-3.svg" alt="Imagem ilustrativa" height="30px"
                                 width="30px">
@@ -464,13 +464,13 @@
                             creation of the software and tests.
                         </p>
                     </article>
-                    <div class="next-step" aria-hidden="true">
+                    <div class="next-step" aria-hidden="false">
                         <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px"
                             width="40px">
                     </div>
 
                     <!-- Step 4 -->
-                    <article class="step-item" aria-label="listitem">
+                    <article class="step-item" >
                         <h3 class="step-title text-center">
                             <img loading="lazy" src="assets/img/steps/step-4.svg" alt="Imagem ilustrativa" height="30px"
                                 width="30px">
@@ -478,27 +478,27 @@
                         </h3>
                         <img loading="lazy" src="assets/img/steps/finalization.svg" alt="Imagem ilustrativa"
                             class="img-step" height="200px" width="333px">
-                        <p class="text-center" aria-describedby="step4-desc">
+                        <p class="text-center">
                             With the software or project in hand, we carry out the final tests and
                             instruction/adaptation of users with the software
                             or the new routine.
                             This is where minor modifications and features are reviewed.
                         </p>
                     </article>
-                    <div class="next-step" aria-hidden="true">
+                    <div class="next-step" aria-hidden="false">
                         <img loading="lazy" src="assets/img/steps/arrow-down.svg" alt="Imagem ilustrativa" height="40px"
                             width="40px">
                     </div>
 
                     <!-- Step 5 -->
-                    <article class="step-item" aria-label="Step 5: Implementation">
+                    <article class="step-item" >
                         <h3 class="step-title text-center">
                             <img loading="lazy" src="assets/img/steps/step-5.svg" alt="Imagem ilustrativa" height="30px" width="30px">
                             Implementation
                         </h3>
                         <img loading="lazy" src="assets/img/steps/implementation.svg" alt="Imagem ilustrativa" class="img-step"
                             width="225px" height="200px">
-                        <p class="text-center" aria-describedby="step5-desc">
+                        <p class="text-center">
                             Transition of the software developed to an operational version. Including the preparation of
                             a production environment,
                             installation and configuration of software, testing, system integration and preparation for
@@ -523,9 +523,7 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row">
-
                     <div class="col-md-8 col-md-offset-2">
                         <!-- accordion starts -->
                         <div class="accordion panel-group" id="accordion" role="tablist">
@@ -535,9 +533,9 @@
                                     <a href="#accordion01" data-toggle="collapse" data-parent="#accordion"
                                         aria-expanded="true" class="">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title" aria-label="What an IT Consultant Does for my company?">
+                                        <h3 class="panel-title" aria-label="What an IT Consultant Does for my company?">
                                             What an IT Consultant Does
-                                            for my company?</h4>
+                                            for my company?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion01" class="panel-collapse collapse in" role="tabpanel"
@@ -570,9 +568,9 @@
                                     <a href="#accordion02" class="collapsed" data-toggle="collapse"
                                         data-parent="#accordion" aria-expanded="false">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title" aria-label="How long does it take to be ready?">How long
+                                        <h3 class="panel-title" aria-label="How long does it take to be ready?">How long
                                             does it take to be ready?
-                                        </h4>
+                                        </h3>
                                     </a>
                                 </div>
                                 <div id="accordion02" class="panel-collapse collapse" role="tabpanel"
@@ -594,7 +592,7 @@
                                     <a href="#accordion03" class="collapsed" data-toggle="collapse"
                                         data-parent="#accordion" aria-expanded="false" aria-controls="accordion03">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title">How much does the investment cost?</h4>
+                                        <h3 class="panel-title">How much does the investment cost?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion03" class="panel-collapse collapse" role="tabpanel"
@@ -613,7 +611,7 @@
                                     <a href="#accordion04" class="collapsed" data-toggle="collapse"
                                         data-parent="#accordion" aria-expanded="false" aria-controls="accordion04">
                                         <i class="fa fa-minus"></i>
-                                        <h4 class="panel-title">What technologies are used?</h4>
+                                        <h3 class="panel-title">What technologies are used?</h3>
                                     </a>
                                 </div>
                                 <div id="accordion04" class="panel-collapse collapse" role="tabpanel"
