--- a/index.html
+++ b/index.html
@@ -765,8 +765,8 @@
             <div class="vw-plugin-top-wrapper"></div>
         </div>
     </div>
-    <script defer src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-    <script defer>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script >
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 
